tests/negative/neg_pr116_tab_indent.safe
package Neg_PR116_Tab_Indent

	function Broken returns Integer
	   return 1
